Manual merge to make things compile after updating to 2.6.18-rc4
Some things are probably broken right now with the generic irq
code update.

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -72,6 +72,8 @@ source "drivers/edac/Kconfig"
 
 source "drivers/rtc/Kconfig"
 
+source "drivers/dma/Kconfig"
+
 source "drivers/ssi/Kconfig"
 
 endmenu
