--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -66,3 +66,11 @@ config BACKLIGHT_HP680
 	  If you have a HP Jornada 680, say y to enable the
 	  backlight driver.
 
+config BACKLIGHT_OMAP
+	tristate "OMAP LCD Backlight"
+	depends on BACKLIGHT_DEVICE && (ARCH_OMAP1 || ARCH_OMAP2)
+	default y
+	help
+	  This driver controls the LCD backlight level and power
+	  for the PWL module of OMAP processors.  Say Y if you plan
+	  to use power saving.
