ARM: OMAP: DSPGW: DSP Gateway driver 3.3.1
Here's the patch that updates DSP Gateway driver to 3.3.1, that
supports omap2 DSP. It also contains generic mailbox interface
considering IVA use on 2420, but this patch itself doesn't contain any
IVA driver.

Regarding omap2, this code is tested only on our 2420 custom board, so
feedbacks from testing on other chips / boards will be greatly
appreciated.

Signed-off-by: Hiroshi DOYU <Hiroshi.DOYU@nokia.com>
Signed-off-by: Juha Yrjola <juha.yrjola@solidboot.com>

--- a/arch/arm/plat-omap/Kconfig
+++ b/arch/arm/plat-omap/Kconfig
@@ -172,6 +172,8 @@ config OMAP_SERIAL_WAKE
 	  to data on the serial RX line. This allows you to wake the
 	  system from serial console.
 
+source "arch/arm/plat-omap/dsp/Kconfig"
+
 endmenu
 
 endif
