cbus: tahvo: Select USB_OTG_UTILS
tahvo-usb.c is using otg_set_transceiver which is built only if
CONFIG_USB_OTG_UTILS is set.

Signed-off-by: Jarkko Nikula <jhnikula@gmail.com>
Signed-off-by: Tony Lindgren <tony@atomide.com>

--- a/drivers/cbus/Kconfig
+++ b/drivers/cbus/Kconfig
@@ -23,6 +23,7 @@ config CBUS_TAHVO
 
 config CBUS_TAHVO_USB
 	depends on CBUS_TAHVO && USB
+	select USB_OTG_UTILS
 	tristate "Support for Tahvo USB transceiver"
 	---help---
 	  If you want Tahvo support for USB transceiver, say Y or M here.
