ti_fragments: audio_display: enable BACKLIGHT_GPIO and PANEL_DPI
Set BACKLIGHT_GPIO and DISPLAY_PANEL_DPI as built-in for AM57xx-EVM.

Signed-off-by: Tomi Valkeinen <tomi.valkeinen@ti.com>
Tested-by: Nishanth Menon <nm@ti.com>
Signed-off-by: Jyri Sarha <jsarha@ti.com>

--- a/ti_config_fragments/audio_display.cfg
+++ b/ti_config_fragments/audio_display.cfg
@@ -3,6 +3,7 @@
 ##################################################
 
 CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_GPIO=y
 
 CONFIG_DRM=y
 CONFIG_DRM_I2C_NXP_TDA998X=y
@@ -13,6 +14,7 @@ CONFIG_DRM_OMAP_NUM_CRTCS=2
 CONFIG_OMAP2_DSS=y
 CONFIG_OMAP5_DSS_HDMI=y
 
+CONFIG_DISPLAY_PANEL_DPI=y
 CONFIG_DISPLAY_PANEL_TLC59108=y
 CONFIG_DISPLAY_CONNECTOR_HDMI=y
 CONFIG_DISPLAY_DRA7EVM_ENCODER_TPD12S015=y
