--- a/ti_config_fragments/baseport.cfg
+++ b/ti_config_fragments/baseport.cfg
@@ -26,3 +26,7 @@ CONFIG_ARM_UNWIND=n
 
 CONFIG_PREEMPT=y
 CONFIG_DEBUG_FS=y
+
+# Firmware Loading from rootfs
+CONFIG_FW_LOADER_USER_HELPER=y
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
