ti_config_fragments/baseport.cfg: Enable SYSTEM V IPC
System V IPC is enabled in omap2plus_defconfig but it is not enabled
in keystone_defconfig.
System V IPC is required by some LTP tests and it is good to have
in general as other userspace tools depend on it.

Signed-off-by: Carlos Hernandez <ceh@ti.com>
Signed-off-by: Tero Kristo <t-kristo@ti.com>

--- a/ti_config_fragments/baseport.cfg
+++ b/ti_config_fragments/baseport.cfg
@@ -36,3 +36,6 @@ CONFIG_DEBUG_FS=y
 # Firmware Loading from rootfs
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+
+# Enable System V IPC
+CONFIG_SYSVIPC=y
