--- a/arch/arm/boot/dts/am4372.dtsi
+++ b/arch/arm/boot/dts/am4372.dtsi
@@ -867,7 +867,7 @@
 			#size-cells = <1>;
 			ranges;
 
-			pru1_0: pru@54434000 {
+			pru1_0: pru0@54434000 {
 				compatible = "ti,am4372-pru-rproc";
 				reg = <0x54434000 0x3000>,
 				      <0x54422000 0x400>,
@@ -876,7 +876,7 @@
 				mboxes = <&mailbox &mbox_pru1_0>;
 			};
 
-			pru1_1: pru@54438000 {
+			pru1_1: pru1@54438000 {
 				compatible = "ti,am4372-pru-rproc";
 				reg = <0x54438000 0x3000>,
 				      <0x54424000 0x400>,
