ARM: DTS: k2g-evm: Use the clock node for mcasp reference clock in sound card
Now that it is possible to get the rate of AUDIO_OSCIN we can use the
proper clock binding for the master clock of mcasp in simple-card.

Signed-off-by: Peter Ujfalusi <peter.ujfalusi@ti.com>
Signed-off-by: Jyri Sarha <jsarha@ti.com>

--- a/arch/arm/boot/dts/k2g-evm.dts
+++ b/arch/arm/boot/dts/k2g-evm.dts
@@ -100,7 +100,7 @@
 
 		sound0_master: simple-audio-card,cpu {
 			sound-dai = <&mcasp2>;
-			system-clock-frequency = <22579200>;
+			clocks = <&k2g_clks K2G_DEV_MCASP2 K2G_DEV_MCASP_AUX_CLK>;
 			system-clock-id = <MCASP_CLK_HCLK_AUXCLK>;
 		};
 
@@ -119,7 +119,7 @@
 
 		sound1_master: simple-audio-card,cpu {
 			sound-dai = <&mcasp2>;
-			system-clock-frequency = <22579200>;
+			clocks = <&k2g_clks K2G_DEV_MCASP2 K2G_DEV_MCASP_AUX_CLK>;
 			system-clock-id = <MCASP_CLK_HCLK_AUXCLK>;
 		};
 
