--- a/arch/arm/boot/dts/k2g.dtsi
+++ b/arch/arm/boot/dts/k2g.dtsi
@@ -368,7 +368,7 @@
 		};
 
 		qspi: qspi@2940000 {
-			compatible = "cdns,qspi-nor";
+			compatible = "ti,k2g-qspi", "cdns,qspi-nor";
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <0x02940000 0x1000>,
