ti_config_fragments/connectivity.cfg: Enable Cadence QSPI controller
K2G SoC has a Cadence QSPI controller, enable it as a module.

Signed-off-by: Vignesh R <vigneshr@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/ti_config_fragments/connectivity.cfg
+++ b/ti_config_fragments/connectivity.cfg
@@ -184,3 +184,6 @@ CONFIG_USB_TI_CPPI41_DMA=y
 CONFIG_TI_KEYSTONE_NETCP_PA_CORE=y
 CONFIG_TI_KEYSTONE_NETCP_PA=y
 CONFIG_TI_KEYSTONE_NETCP_PA2=y
+
+#K2 QSPI
+CONFIG_SPI_CADENCE_QUADSPI=m
