ARM: dts: AM4372: Add PRUSS IEP and MII_RT resources
Add the memory resources for the PRUSS Industrial Ethernet
Peripheral (IEP) and the Real Time Media Independent Interface
controller (MII_RT) modules to the PRUSS1 node for AM437x SoCs.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm/boot/dts/am4372.dtsi
+++ b/arch/arm/boot/dts/am4372.dtsi
@@ -851,8 +851,11 @@
 			      <0x54402000 0x2000>,
 			      <0x54410000 0x8000>,
 			      <0x54420000 0x2000>,
-			      <0x54426000 0x2000>;
-			reg-names = "dram0", "dram1", "shrdram2", "intc", "cfg";
+			      <0x54426000 0x2000>,
+			      <0x5442e000 0x31c>,
+			      <0x54432000 0x58>;
+			reg-names = "dram0", "dram1", "shrdram2", "intc", "cfg",
+				    "iep", "mii_rt";
 			interrupts = <GIC_SPI 20 IRQ_TYPE_LEVEL_HIGH
 				      GIC_SPI 21 IRQ_TYPE_LEVEL_HIGH
 				      GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH
