ti_config_fragments/connectivity.cfg: Enable TLK10X Driver
AM437x, AM571x, and AM572x IDKs have this part.

Signed-off-by: Andrew F. Davis <afd@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/ti_config_fragments/connectivity.cfg
+++ b/ti_config_fragments/connectivity.cfg
@@ -149,6 +149,9 @@ CONFIG_TI_PRUETH=m
 #MDIO phys
 CONFIG_MICREL_PHY=y
 
+#PRU MII PHYs for Industrial Boards
+CONFIG_DP83848_PHY=y
+
 #MMC
 CONFIG_MMC=y
 CONFIG_MMC_OMAP_HS=y
