ti_config_fragments/connectivity.cfg: Enable PISOSR Driver.
AM437x, AM571x, and AM572x IDKs have this part.

Signed-off-by: Andrew F. Davis <afd@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/ti_config_fragments/connectivity.cfg
+++ b/ti_config_fragments/connectivity.cfg
@@ -6,6 +6,9 @@
 CONFIG_GPIO_PCF857X=y
 CONFIG_GPIO_TPIC2810=m
 
+#SPI GPIO expanders
+CONFIG_GPIO_PISOSR=m
+
 #PCIe
 CONFIG_PCI=y
 CONFIG_PCI_DRA7XX=y
