media: ti-vpe: vpdma: Clean up module build
The vpdma library does not require Kconfig entries because
it only pulled in by either VIP or VPE driver.
It is not a user selectable option, so no need to make it
visible in the kernel config either.

Signed-off-by: Benoit Parrot <bparrot@ti.com>
Signed-off-by: Jyri Sarha <jsarha@ti.com>

--- a/drivers/media/platform/ti-vpe/Makefile
+++ b/drivers/media/platform/ti-vpe/Makefile
@@ -1,6 +1,7 @@
 obj-$(CONFIG_VIDEO_TI_VPE) += ti-vpe.o
 obj-$(CONFIG_VIDEO_TI_VIP) += ti-vip.o
-obj-$(CONFIG_VIDEO_TI_VPDMA_HELPER) += ti-vpdma.o
+obj-$(CONFIG_VIDEO_TI_VPE) += ti-vpdma.o
+obj-$(CONFIG_VIDEO_TI_VIP) += ti-vpdma.o
 
 ifdef CONFIG_VIDEO_TI_VPE_DEBUG
 CFLAGS_vpe.o := -DDEBUG
