arm64: dts: ti: k3-am654-base-board: split the R5F memory regions
The commit 44dc2a65ba1d ("arm64: dts: ti: k3-am654-evm: Add DDR carveout
memory nodes for R5Fs") adds two carveout reserved memory nodes for each
of the MCU R5F remote processor devices. Split each of these regions into
two different regions for the all the TI K3 AM65x boards to support R5F
firmwares without any RSC_CARVEOUT entries in their resource tables. The
first region will be used as the DMA pool for the rproc devices, and the
second region will furnish the static carveout regions for the firmware
memory.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
@@ -35,15 +35,27 @@
 		#size-cells = <2>;
 		ranges;
 
-		r5f1_memory_region: r5f1-memory@9b000000 {
+		r5f1_dma_memory_region: r5f1-dma-memory@9b000000 {
 			compatible = "shared-dma-pool";
-			reg = <0 0x9b000000 0 0x1000000>;
+			reg = <0 0x9b000000 0 0x100000>;
 			no-map;
 		};
 
-		r5f0_memory_region: r5f0-memory@9c000000 {
+		r5f1_memory_region: r5f1-memory@9b100000 {
 			compatible = "shared-dma-pool";
-			reg = <0 0x9c000000 0 0x800000>;
+			reg = <0 0x9b100000 0 0xf00000>;
+			no-map;
+		};
+
+		r5f0_dma_memory_region: r5f0-dma-memory@9c000000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x9c000000 0 0x100000>;
+			no-map;
+		};
+
+		r5f0_memory_region: r5f0-memory@9c100000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x9c100000 0 0x700000>;
 			no-map;
 		};
 
@@ -129,11 +141,11 @@
 };
 
 &mcu_r5f0 {
-	memory-region = <&r5f0_memory_region>;
+	memory-region = <&r5f0_dma_memory_region>, <&r5f0_memory_region>;
 };
 
 &mcu_r5f1 {
-	memory-region = <&r5f1_memory_region>;
+	memory-region = <&r5f1_dma_memory_region>, <&r5f1_memory_region>;
 };
 
 &main_uart0 {
