ti_config_fragments: v8_baseport: Enable PAT driver
Enable PAT in v8 config.

Signed-off-by: Andrew F. Davis <afd@ti.com>

--- a/ti_config_fragments/v8_baseport.cfg
+++ b/ti_config_fragments/v8_baseport.cfg
@@ -150,3 +150,6 @@ CONFIG_MFD_PALMAS=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_PALMAS=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+
+# TI PAT
+CONFIG_TI_PAT=y
