arm64: dts: ti: k3-j721e: usb: Sync with driver changes
Adapt to changes in V10 of the cdns3 USB driver.

Signed-off-by: Roger Quadros <rogerq@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -1842,7 +1842,7 @@
 		};
 
 		usb0: usb@6000000 {
-			compatible = "cdns,usb3-1.0.1";
+			compatible = "cdns,usb3";
 			reg = <0x00 0x6000000 0x00 0x10000>,
 			      <0x00 0x6010000 0x00 0x10000>,
 			      <0x00 0x6020000 0x00 0x10000>;
@@ -1877,7 +1877,7 @@
 		};
 
 		usb1: usb@6400000 {
-			compatible = "cdns,usb3-1.0.1";
+			compatible = "cdns,usb3";
 			reg = <0x00 0x6400000 0x00 0x10000>,
 			      <0x00 0x6410000 0x00 0x10000>,
 			      <0x00 0x6420000 0x00 0x10000>;
