--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -622,7 +622,7 @@
 	dr_mode = "otg";
 	maximum-speed = "super-speed";
 	phys = <&serdes3_usb_link>;
-	phy-names = "cdns3,usbphy";
+	phy-names = "cdns3,usb3-phy";
 };
 
 &usbss1 {
