arm64: dts: ti: k3-j721e-common-proc-board: disable main_uart2 for eth switch fw
The main_uart2 is used by eth switch fw running on remote R5F core, so
it has to be hidden from Linux.

Signed-off-by: Grygorii Strashko <grygorii.strashko@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -754,3 +754,8 @@
 		ti,adc-channels = <0 1 2 3 4 5 6 7>;
 	};
 };
+
+/* uart2 assigned to cpsw9g eth-switch fw running on remote CPU core */
+&main_uart2 {
+	status = "disabled";
+};
