HACK: ti_config_fragments: baseport: Enable DMA-BUF export driver
Enable DMA-BUF export driver used by OpenCL/OpenVX usecases.

Signed-off-by: Andrew F. Davis <afd@ti.com>

--- a/ti_config_fragments/baseport.cfg
+++ b/ti_config_fragments/baseport.cfg
@@ -588,3 +588,6 @@ CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_CARVEOUT_HEAP=y
 CONFIG_ION_CHUNK_HEAP=y
 CONFIG_ION_TI=y
+
+# DMA-BUF exporter
+CONFIG_DMA_BUF_PHYS=y
