HACK: ti_config_fragments: v8_baseport: Enable DMA-BUF export driver
Enable DMA-BUF export driver used by OpenCL/OpenVX usecases.

Signed-off-by: Andrew F. Davis <afd@ti.com>

--- a/ti_config_fragments/v8_baseport.cfg
+++ b/ti_config_fragments/v8_baseport.cfg
@@ -145,6 +145,9 @@ CONFIG_ION_CARVEOUT_HEAP=y
 CONFIG_ION_CHUNK_HEAP=y
 CONFIG_ION_TI=y
 
+# DMA-BUF exporter
+CONFIG_DMA_BUF_PHYS=y
+
 # PMIC
 CONFIG_MFD_PALMAS=y
 CONFIG_REGULATOR=y
