arm64: dts: ti: k3-j721e: Add "max-virtual-functions" dt property to pcie-ep
Add "max-virtual-functions" dt property to pcie-ep to specify the
maximum number of virtual function supported by each physical function.

Signed-off-by: Kishon Vijay Abraham I <kishon@ti.com>
Signed-off-by: Sekhar Nori <nsekhar@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -1014,6 +1014,7 @@
 			reg-names = "reg", "addr_space";
 			cdns,max-outbound-regions = <16>;
 			max-functions = /bits/ 8 <6>;
+			max-virtual-functions = /bits/ 8 <0x4 0x4 0x4 0x4 0x0 0x0>;
 			dma-coherent;
 		};
 	};
@@ -1061,6 +1062,7 @@
 			reg-names = "reg", "addr_space";
 			cdns,max-outbound-regions = <16>;
 			max-functions = /bits/ 8 <6>;
+			max-virtual-functions = /bits/ 8 <0x4 0x4 0x4 0x4 0x0 0x0>;
 			dma-coherent;
 		};
 	};
@@ -1108,6 +1110,7 @@
 			reg-names = "reg", "addr_space";
 			cdns,max-outbound-regions = <16>;
 			max-functions = /bits/ 8 <6>;
+			max-virtual-functions = /bits/ 8 <0x4 0x4 0x4 0x4 0x0 0x0>;
 			dma-coherent;
 		};
 	};
