arm64: dts: ti: k3-j721e-main.dtsi: Add dma-coherent to smmu0
When emulating stage 1 translations in Jailhouse, sometimes an update to
the command queue is not visible to the hypervisor, causing the command
previously in the slot to be issued. Adding dma-coherent fixes that.

Signed-off-by: Pratyush Yadav <p-yadav1@ti.com>
Signed-off-by: Lokesh Vutla <lokeshvutla@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -104,6 +104,7 @@
 				     <GIC_SPI 768 IRQ_TYPE_EDGE_RISING>;
 			interrupt-names = "eventq", "gerror";
 			#iommu-cells = <1>;
+			dma-coherent;
 		};
 
 		hwspinlock: spinlock@30e00000 {
